export const snapshot = {};

snapshot[`parseNoteType() > not found 1`] = `
{
  err: {
    message: "No note type settings found in the page.",
    name: "NoteTypeNotFoundError",
  },
  ok: false,
  val: null,
}
`;

snapshot[`parseNoteType() > found 1`] = `
{
  err: null,
  ok: true,
  val: {
    css: "
.card {
  display: flex;
  justify-content: center;
  font-family: arial;
  font-size: 20px;
  color: black;
  background-color: white;
}
.cloze {
  font-weight: bold;
  color: blue;
}
.nightMode .cloze {
  color: lightblue;
}",
    fields: [
      {
        description: "問題文",
        font: undefined,
        fontSize: undefined,
        name: "Text",
        rtl: undefined,
      },
      {
        name: "Description",
      },
      {
        description: "問題の取得元URL",
        font: undefined,
        fontSize: undefined,
        name: "SourceURL",
        rtl: undefined,
      },
    ],
    id: 343480954545,
    isCloze: true,
    name: "システム英単語用穴埋め問題",
    project: "sample",
    templates: [
      {
        answer: '
{{cloze:Text}}
<hr>
{{Description}}
<a href="{{SourceURL}}">source</a>',
        name: "Card 1",
        question: "
{{cloze:Text}}
{{type:Text}}",
      },
    ],
    title: "Scrapboxを使ったAnkiデータ構築案2:note type",
    updated: 1693465105,
  },
}
`;

snapshot[`parseNoteType() > splitted 1`] = `
{
  err: {
    message: "Expected double-quoted property name in JSON at position 121 (line 7 column 1)",
    name: "NoteTypeSyntaxError",
  },
  ok: false,
  val: null,
}
`;
